--- a/app/src/main/res/layout/activity_business_batch_payout_search.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_search.xml
@@ -7,149 +7,150 @@
     android:background="#f2f4f5"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:background="@drawable/bottomradius"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/_21sdp"
+            android:paddingTop="@dimen/_45sdp"
+            android:paddingRight="@dimen/_21sdp"
+            android:paddingBottom="@dimen/_16sdp">
 
-            <LinearLayout
+            <ImageView
+                android:id="@+id/closeBtnIV"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_close" />
+
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bottomradius"
-                android:orientation="vertical"
-                android:paddingStart="@dimen/_21sdp"
-                android:paddingTop="@dimen/_45sdp"
-                android:paddingRight="@dimen/_21sdp"
-                android:paddingBottom="@dimen/_16sdp">
+                android:layout_marginTop="@dimen/_21sdp"
+                android:fontFamily="@font/opensans_bold"
+                android:text="@string/payout_transactions"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
 
-                <ImageView
-                    android:id="@+id/closeBtnIV"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/ic_close" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_38sdp"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="@dimen/_11sdp"
+                android:layout_marginEnd="1dp"
+                android:layout_marginBottom="@dimen/_2sdp"
+                app:cardCornerRadius="@dimen/_19sdp">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_21sdp"
-                    android:fontFamily="@font/opensans_bold"
-                    android:text="@string/payout_transactions"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_16ssp" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_38sdp"
-                    android:layout_marginStart="1dp"
-                    android:layout_marginTop="@dimen/_11sdp"
-                    android:layout_marginEnd="1dp"
-                    android:layout_marginBottom="@dimen/_2sdp"
-                    app:cardCornerRadius="@dimen/_19sdp">
+                    <ImageView
+                        android:id="@+id/searchIconIV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="@dimen/_9sdp"
+                        android:src="@drawable/ic_search_icon" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                        android:gravity="center">
+
+                        <EditText
+                            android:id="@+id/payoutSearchET"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="@dimen/_8sdp"
+                            android:layout_marginEnd="@dimen/_5sdp"
+                            android:layout_weight="1"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
+                            android:background="@android:color/transparent"
+                            android:cursorVisible="true"
+                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
+                            android:fontFamily="@font/opensans_regular"
+                            android:hint="Payout ID"
+                            android:imeOptions="actionDone"
+                            android:maxLength="35"
+                            android:maxLines="1"
+                            android:singleLine="true"
+                            android:textColor="@color/primary_black"
+                            android:textColorHint="@color/dark_grey"
+                            android:textCursorDrawable="@drawable/cursor_color"
+                            android:textSize="@dimen/_10ssp" />
+
+                        <View
+                            android:layout_width="@dimen/_1sdp"
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="@dimen/_6sdp"
+                            android:layout_marginEnd="@dimen/_11sdp"
+                            android:layout_marginBottom="@dimen/_6sdp"
+                            android:background="@color/dark_color_bg" />
 
                         <ImageView
-                            android:id="@+id/searchIconIV"
+                            android:id="@+id/filterIconIV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginStart="@dimen/_9sdp"
-                            android:src="@drawable/ic_search_icon" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center">
-
-                            <EditText
-                                android:id="@+id/payoutSearchET"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_marginStart="@dimen/_8sdp"
-                                android:layout_marginEnd="@dimen/_5sdp"
-                                android:layout_weight="1"
-                                android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                                android:background="@android:color/transparent"
-                                android:cursorVisible="true"
-                                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
-                                android:fontFamily="@font/opensans_regular"
-                                android:hint="Payout ID"
-                                android:imeOptions="actionDone"
-                                android:maxLength="35"
-                                android:maxLines="1"
-                                android:singleLine="true"
-                                android:textColor="@color/primary_black"
-                                android:textColorHint="@color/dark_grey"
-                                android:textCursorDrawable="@drawable/cursor_color"
-                                android:textSize="@dimen/_10ssp" />
-
-                            <View
-                                android:layout_width="@dimen/_1sdp"
-                                android:layout_height="match_parent"
-                                android:layout_marginTop="@dimen/_6sdp"
-                                android:layout_marginEnd="@dimen/_11sdp"
-                                android:layout_marginBottom="@dimen/_6sdp"
-                                android:background="@color/dark_color_bg" />
-
-                            <ImageView
-                                android:id="@+id/filterIconIV"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginEnd="@dimen/_14sdp"
-                                android:contentDescription="@string/filter_button"
-                                android:src="@drawable/ic_filtericon" />
-                        </LinearLayout>
-
-
+                            android:layout_marginEnd="@dimen/_14sdp"
+                            android:contentDescription="@string/filter_button"
+                            android:src="@drawable/ic_filtericon" />
                     </LinearLayout>
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
 
-            <LinearLayout
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_11sdp"
+                android:layout_weight="1"
+                android:fontFamily="@font/opensans_bold"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_20sdp"
-                    android:layout_marginTop="@dimen/_11sdp"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/opensans_bold"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_12ssp" />
+            <TextView
+                android:id="@+id/CynTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_11sdp"
+                android:layout_marginRight="@dimen/_21sdp"
+                android:layout_marginBottom="@dimen/_6sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:text="@string/cyn_under_payout"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp"
+                android:visibility="gone" />
+        </LinearLayout>
 
-                <TextView
-                    android:id="@+id/CynTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_11sdp"
-                    android:layout_marginRight="@dimen/_21sdp"
-                    android:layout_marginBottom="@dimen/_6sdp"
-                    android:fontFamily="@font/opensans_regular"
-                    android:text="@string/cyn_under_payout"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp"
-                    android:visibility="gone" />
-            </LinearLayout>
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/payoutRefreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                android:id="@+id/payoutRefreshLayout"
+            <androidx.core.widget.NestedScrollView
+                android:id="@+id/nestedsV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <androidx.core.widget.NestedScrollView
-                    android:id="@+id/nestedsV"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -162,9 +163,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/_2sdp"
-                            android:background="@drawable/bg_white"
-                            app:cardCornerRadius="@dimen/_10sdp"
-                            android:visibility="gone">
+                            android:visibility="gone"
+                            app:cardCornerRadius="@dimen/_10sdp">
 
                             <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/payoutRecyclerView"
@@ -211,20 +211,21 @@
                             android:layout_height="@dimen/_30sdp" />
 
                     </LinearLayout>
-                        <TextView
-                            android:id="@+id/payoutNoMoreTransactions"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
-                            android:gravity="center"
-                            android:text="You have no more transactions"
-                            android:textColor="@color/dark_grey"
-                            android:layout_marginBottom="@dimen/_20sdp"
-                            android:textSize="@dimen/_10ssp"
-                            android:visibility="visible" />
-                    </LinearLayout>
-                </androidx.core.widget.NestedScrollView>
-            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-        </LinearLayout>
+                    <TextView
+                        android:id="@+id/payoutNoMoreTransactions"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/_20sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:gravity="center"
+                        android:text="You have no more transactions"
+                        android:textColor="@color/dark_grey"
+                        android:textSize="@dimen/_10ssp"
+                        android:visibility="visible" />
+                </LinearLayout>
+            </androidx.core.widget.NestedScrollView>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    </LinearLayout>
 </LinearLayout>
